# pipecat-homeassistant

./: README.md
.github/workflows/: publish.yml
addons/pipecat_assist/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  config.yaml  constraints-legacy-amd64.txt  pyproject.toml
addons/pipecat_assist/app/: audio_debug.py  config.py  ha_oauth.py  main.py  text_agent.py  web_search_tool.py
addons/pipecat_assist/app/ui/: index.css  index.html  index.js
addons/pipecat_assist/root/: run.sh
addons/pipecat_assist/translations/: en.yaml  pl.yaml
addons/pipecat_assist/ui-src/: package.json  vite.config.js
addons/pipecat_assist/ui-src/src/: main.jsx  styles.css
addons/pipecat_assist_legacy_amd64/: DOCS.md  README.md  build.yaml  config.yaml
custom_components/pipecat_assist/: __init__.py  const.py  conversation.py  manifest.json  strings.json  stt.py  tts.py
custom_components/pipecat_assist/www/: pipecat-assist-card.js
docs/: gemini-live-home-assistant.md
